--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta property="og:image" content="http://drive.google.com/uc?export=view&id=1T1vQeH2OF2lIYaUH10ZYmUKi--ZQ_5M3" />
+    <title>Dogtastic! Name and Claim Your Own Cyber Kennel</title>
   </head>
   <body>
     <noscript>
