--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <footer>
+      <a href="https://github.com/drinkingtheink/dogtastic" target="_blank">About this Project</a>
+      <a href="https://drinkingtheink.github.io/" target="_blank">About the Author</a>
+    </footer>
   </body>
 </html>
