--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <meta property="og:image" content="https://gdurl.com/Iuxd" />
+    <meta property="og:image" content="https://ibb.co/5hNy2bR" />
     <title>Dogtastic! Name and Claim Your Own Cyber Kennel</title>
   </head>
   <body>
