--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta property="og:image" content="https://i.ibb.co/BG63JDh/dogtastic.png" />
+    <meta name="description" content="Ruff Ruff!! Ruff!!! Aaaaooooooooooooo!! Ruff!! Bark Bark!!!">
     <title>Dogtastic! Name and Claim Your Own Cyber Kennel</title>
   </head>
   <body>
